# vrm-viewer

./: AGENTS.md  README.md  index.html  package-lock.json  package.json
example/: Hip Hop Dancing.fbx
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AnimationPanel.tsx  ExpressionPanel.tsx
src/hooks/: useVrmViewer.ts
